selectshow menu done

--- a/menuable/selectshow/selectshow.html
+++ b/menuable/selectshow/selectshow.html
@@ -8,31 +8,34 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
-			.selected{
+			.selected>a{
             	background-color: #ddffee;
             }
+			.active>a {
+				color: red;
+			}
         </style>
 	</head>
 	<body>
         <ul id="menu3">
-            <li>older 2
+            <li><a>older 2</a>
 					<ul class='submenu'>
-                        <li>Folder Control
+                        <li><a>Folder Control</a>
 							<ul class='submenu'>
-	                        	<li>Another</li>
-	                        	<li>Exec</li>
-	                        	<li>Policy</li>
+	                        	<li><a>Another</a></li>
+	                        	<li><a>Exec</a></li>
+	                        	<li><a>Policy</a></li>
 							</ul>
 						</li>
-                        <li>Search Policies</li>
-                        <li>View Policies</li>
+                        <li><a>Search Policies</a></li>
+                        <li><a>View Policies</a></li>
 					</ul>
 			</li>
-			<li>Google
+			<li><a>Google</a>
 					<ul class='submenu'>
-                        <li>Risk</li>
-                        <li>Enterprise</li>
-                        <li>Incident</li>
+                        <li><a>Risk</a></li>
+                        <li><a>Enterprise</a></li>
+                        <li><a>Incident</a></li>
 					</ul>
 			</li>
         </ul>
@@ -43,14 +46,11 @@
 			
 			Phui.Menuable.SelectShow.extend("Phui.Menuable.SelectShow.Submenu",
 			{
-				sub : function(el){
-					return el.children().eq(0);
-				},
 				">li click": function(el, ev){
 					el.trigger("activate")
 				},
 				">li hoverinit": function(el, ev, hover){
-					hover.setDelay(500);
+					hover.setDelay(50);
 				},
 				">li hoverenter": function(el, ev, hover){
 					el.trigger("select")
@@ -58,6 +58,7 @@
 			});
 			$("#menu3").phui_menuable_select_show_submenu().find("ul")
 					   .phui_menuable_select_show_submenu().hide()
+					  
 			
 		</script>
 	</body>
