--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -98,7 +98,17 @@
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
 		    <div>
-		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+		        <div>
+                    <ul id='uitabs2'>
+    		            <li><a href="javascript://">Alpha</a></li>
+                        <li><a href="javascript://">Beta</a></li>
+                        <li><a href="javascript://">Gamma</a></li>
+    		        </ul>
+                    <div>Content Alpha</div>
+                    <div>Content Beta</div>
+                    <div>Content Gamma</div>
+                </div>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
@@ -122,7 +132,7 @@
 					$(this).trigger("active")
 			});
 			$("#tabs").phui_tabs()
-			$("#uitabs").phui_ui_tabs()
+			$("#uitabs, #uitabs2").phui_ui_tabs()
 		</script>
 	</body>
 </html>
