cleaning up stuf and fixing menu

--- a/block/block.html
+++ b/block/block.html
@@ -14,7 +14,8 @@
         </style>
 	</head>
 	<body>
-	    <div id='blocker'></div>
+	    <h1>Block</h1>
+		<div id='blocker'></div>
 		<a href='#' id='block'>Block</a>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/block&steal[env]=development'>   
