--- a/grid/grid.html
+++ b/grid/grid.html
@@ -32,7 +32,7 @@
 					return {
 						id		:	num,
 						name : "Resource "+num,
-						description: "Resource "+num+" description.  You might want to read this.",
+						description: "Resource "+num+" description. <br/> You might want to read this.",
 						date: new Date(Math.random()*1000*60*60*24*365*30),
 						location: Math.round(Math.random()*2000)+" Pinetree Ln",
 						users_count: Math.round(Math.random()*20),
