--- a/menu/menu.html
+++ b/menu/menu.html
@@ -125,7 +125,7 @@
         <script type='text/javascript'>
             steal.plugins('phui/menu').then(function(){
 				$("#menu1").phui_menu();
-            	$("#menu2").phui_ui_menu().trigger("show").trigger("move", {top: 250, left: 30});
+            	$("#menu2").phui_ui_menu().show().trigger("move", {top: 250, left: 30});
 			}).start();
         </script>
 	</body>
