--- a/filler/filler.html
+++ b/filler/filler.html
@@ -53,26 +53,26 @@
 				font-weight: normal;
 			}
 			#myloggin {
-				height: 200px;
+				height: 0px;
 				overflow: auto;
 				
 			}
         </style>
 	</head>
 	<body>
-		<h1>Phui.Filler Demo</h1>
-		<p>Phui.Filler will expand an element to fill a parent.  This is very useful for elements that change size.
+		<h1>Filler</h1>
+		<!--<p>Phui.Filler will expand an element to fill a parent.  This is very useful for elements that change size.
 			Phui.Filler is smart enough to know when to adjust for internal element's margins.  To 
 			make resizables on the page, click run.  This will add Phui.Resizables.  Resize the parent to watch the internal
 			filler fill the space.  
-		</p>
+		</p>-->
 		
 		<a href="javascript://" id='run'>Run</a>
-		<h2>Limitations</h2>
+		<!--<h2>Limitations</h2>
 		<p>If you want to support IE6, it's best to not have top margins on the first element in a container, and bottom
 			margins on the last element.  Phui.Filler will compensate for this, but things will not look exactly the same in 
 			IE6.  
-		</p>
+		</p>-->
 		<h3>jQuery.support.containerSizeAdjustments: <span id='log'></span></h3>
 		
 		<table>
@@ -143,7 +143,8 @@
 				$("#run").click(function(){
 					$(".container").each(function(){
 						$(this).phui_resizable().find(".fill").phui_filler({
-							parent: $(this)
+							parent: $(this),
+							adjust: true
 						})
 					})
 				})
