--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -80,7 +80,7 @@
 			
 			//J.Toolbar( J.Menu(J.Positionable)  ).extend("My.Toolbar")
 			
-			$("#toolbar").phui_ui_toolbar();  
+			$("#toolbar>ul").phui_ui_toolbar();  
         </script>
 	</body>
 </html>
