--- a/modal/modal.html
+++ b/modal/modal.html
@@ -17,7 +17,8 @@
         </style>
 	</head>
 	<body>
-	    <div id='modal'>
+	    <h1>Modal</h1>
+		<div id='modal'>
 	    	<h3>Some Modal</h3>
 			<p>Here is some text. Blah blah blah. I am watching SNL with Jennifer Lopez.
 				She still has it.  But, I am not sure SNL does.
