--- a/positionable/positionable.html
+++ b/positionable/positionable.html
@@ -42,7 +42,7 @@
     
 </head>
 <body>
-
+<h1>Positionable</h1>
 <div class="demo">
 
 <div id="parent">
@@ -64,7 +64,7 @@
     </p>
 </div>
 
-<div style="padding: 20px; margin-top: 75px;">
+<div style="padding: 20px; margin-top: 10px;">
 	position...
     <div style="padding-bottom: 20px;">
 
@@ -72,13 +72,13 @@
     <select id="my_horizontal">
         <option value="left">left</option>
         <option value="center">center</option>
-        <option value="right">right</option>
+        <option value="right" selected>right</option>
     </select> 
     <select id="my_vertical">
 
         <option value="top">top</option>
         <option value="middle">center</option>
-        <option value="bottom">bottom</option>
+        <option value="bottom" selected>bottom</option>
     </select>
     </div>
     <div style="padding-bottom: 20px;">
