--- a/resizable/resizable.html
+++ b/resizable/resizable.html
@@ -8,11 +8,13 @@
             body {font-family: verdana}
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
-            td {padding: 3px;}
+            td {padding: 3px;
+				vertical-align: top;
+			}
 			
 			
 			#first {
-				width: 300px;
+				width: 200px;
 				height: 200px;
 				border: dashed 1px gray;
 				position: relative;
@@ -23,13 +25,35 @@
         </style>
 	</head>
 	<body>
-		<p>Some padding ...</p>
-	    <div class='wrap' id='first'>Here is some swell content</div>
-		<textarea class='wrap'>Here is my textarea</textarea>
-		<input class='wrap' type='text'/>
-		<select  class='wrap'><option>1</option></select>
-		<button type='button'  class='wrap'>try me</button>
-		<img src='http://cdn.javascriptmvc.com/jmvc/plugins/documentation/app/images/video.png'  class='wrap'/>
+		<h1>Resizable</h1>
+	    <table width='100%' style='table-layout: fixed'>
+	    	<tr>
+	    		<td>
+	    			<div class='wrap' id='first'>Here is some swell content</div>
+	    		</td>
+				<td>
+					<textarea class='wrap'>Here is my textarea</textarea>
+				</td>
+				<td>
+					<input class='wrap' type='text'/>
+				</td>
+	    	</tr>
+			<tr>
+				<td>
+					<select  class='wrap'><option>1</option></select>
+				</td>
+				<td>
+					<button type='button'  class='wrap'>try me</button>
+				</td>
+				<td>
+					<img src='http://cdn.javascriptmvc.com/jmvc/plugins/documentation/app/images/video.png'  
+							class='wrap'
+							style="border: solid 1px black"/>
+				</td>
+			</tr>
+	    </table>
+		
+		
 		
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/resizable&steal[env]=development'
