groupable grid and sortable

--- a/groupablegrid.html
+++ b/groupablegrid.html
@@ -15,6 +15,7 @@
 			}
         </style>
 		<link type="text/css" href="grid/grid.css" rel="stylesheet" />
+		<link type="text/css" href="grid/groupable/groupable.css" rel="stylesheet" />
 	</head>
 	<body>
 	    <div class='grid'>
