treegrid works with correct fixtures

--- a/groupablegrid.html
+++ b/groupablegrid.html
@@ -18,9 +18,7 @@
 		<link type="text/css" href="grid/groupable/groupable.css" rel="stylesheet" />
 	</head>
 	<body>
-	    <div class='grid'>
-	    	
-	    </div>
+	    <div class='grid'></div>
 		<script type='text/javascript' 
                 src='../steal/steal.js'>   
         </script>
