adding broken tabs demo

--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -37,7 +37,7 @@
 	</head>
 	<body>
 		<h1>Tabs</h1>
-		<!--<h2>Phui.Tabable</h2>
+		<h2>Phui.Tabable</h2>
 		<div class='tabarea'>
 		    <ul id="tabable">
 		        <li><a href="#fragment-1"><span>One</span></a></li>
@@ -57,7 +57,7 @@
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
-		</div>-->
+		</div>
 
 		<div class='tabarea'>
 		    <div>
