Removed comments from tabs.

--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -120,7 +120,7 @@
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			/*$("#tabable").phui_tabable().find("li").click(function(ev){
+			$("#tabable").phui_tabable().find("li").click(function(ev){
 				ev.preventDefault();
 				ev.stopPropagation();
 				$(this).trigger("activate")
@@ -130,7 +130,7 @@
 			}).keypress(function(ev){
 				if(ev.keyCode == 13)
 					$(this).trigger("active")
-			});*/
+			});
 			$("#tabs").phui_tabs()
 			$("#uitabs, #uitabs2").phui_ui_tabs()
 		</script>
