--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -76,7 +76,7 @@
 							var html = [];
 							html.push("<span style=\"float:left; margin-left:\"");
 							if(instance.childCount) html.push("")
-							html.push("display: block;height:13px;\"></span>");
+							html.push("display: block;height:13px;\">" + instance.text + "</span>");
                             return html.join("");
                         }
                     }
