spinner and key changes

--- a/key_validator/key_validator.html
+++ b/key_validator/key_validator.html
@@ -8,7 +8,7 @@
 		<input id='validate'>
 		<script type='text/javascript' src='../../steal/steal.js?phui/key_validator/key_validator.js'></script>
 		<script type='text/javascript'>
-			$('#validate').phui_key_validator({regExp: /^[-+]?[0-9]*\.?([0-9]+)?$/});
+			$('#validate').phui_key_validator({test: /^[-+]?[0-9]*\.?([0-9]+)?$/});
 		</script>
 	</body>
 </html>
