Moved combo lookup code to Lookup model.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -17,6 +17,7 @@
         <div id="combobox_demo"></div>
 		<div><h1>Some html that dropdown draws over.</h1></div>
 		<div><button type="button">Dummy</button></div>
+		<div id="log"></div>
 
         <script type='text/javascript' 
                 src='../../steal/steal.js'>   
