Number formatter plugin.

--- a/number_formatter/number_formatter.html
+++ b/number_formatter/number_formatter.html
@@ -19,5 +19,10 @@
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/number_formatter&steal[env]=development'>   
         </script>
+		<script type="text/javascript">
+			$(function(){
+				
+			})	
+		</script>	
 	</body>
 </html>
