Fixed problem with combobox lookup.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -96,6 +96,7 @@
                     model: Document,
                     value : "value", // maybe instance.id ?
                     text : "text", 
+					maxLookupDepth: 7,
                     render : {
                         text : function(instance){
 							var html = [];
