--- a/widget/group_editable.html
+++ b/widget/group_editable.html
@@ -19,7 +19,7 @@
         </script>
 		<script type='text/javascript'>
 			steal.plugins('phui/widget/group_editable','phui/widget/editable').then(function(){
-				$("#content").html("//phui/widget/group_editable/example/view.ejs",{} ).hookupView();
+				$("#content").html("//phui/widget/group_editable/example/view.ejs",{} )
 				
 			})
 			steal.start();
