Fixed typo that was causing combobox to display incorrectly in ie.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -104,7 +104,7 @@
 							html.push(" style=\"float:left; margin-left:");
 							if(instance.depth) html.push(instance.depth * 20 + "px;"); 
 							html.push("display: block;height:13px;\" ");
-						    if(instance.type == "folder") html.push(" class=\"ui-icon ui-icon-folder-open\" ");
+						    if(instance.type == "folder") html.push(" class=\"ui-icon ui-icon-folder-open\"> ");
 							if(instance.type == "file") html.push(" class=\"ui-icon ui-icon-document\"> ");							
 							html.push("</span>");
 							
