Added showNested option to combobox widget.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -113,7 +113,7 @@
                     textTemplate: "//phui/combobox/views/default_text_template.ejs",
                     textStyle: "color:blue;font-style:italic;",
                     loadOnDemand: true,
-                    showHierarchy: true,
+                    showNested: true,
                     maxHeight: "300px",
                     hoverClassName: "hover",
                     selectedClassName: "selected",
