Fixed bug with autocomplete lookup.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -112,6 +112,7 @@
                     /*items: items,*/
                     textTemplate: "//phui/combobox/views/default_text_template.ejs",
                     textStyle: "color:blue;font-style:italic;",
+					autocompleteEnabled: true,
                     loadOnDemand: true,
                     showNested: true,
                     maxHeight: "300px",
