Now you can just pass an array of strings when you pre-populate combobox.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -127,11 +127,7 @@
 					items.push( new Item(rawItems[i]) );
 				}*/
 				
-				var items = [
-				                {"id": 1, "value": 1, "text": "archive", "enabled": true, "depth": 0, "children": []},
-								{"id": 2, "value": 2, "text": "delete", "enabled": true, "depth": 0, "children": []},
-								{"id": 3, "value": 3, "text": "none", "enabled": true, "depth": 0, "children": []},																 
-				            ];
+				var items = ["Archive", "Delete" , "None"];
 				 
 				$("#combobox_demo").phui_combobox({
                     items: items,
