--- a/combobox/select/select.html
+++ b/combobox/select/select.html
@@ -9,15 +9,25 @@
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
         </style>
+        <link type="text/css" href="../../smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />		
+        <link type="text/css" href="../combobox.css" rel="stylesheet" />		
 	</head>
 	<body>
-	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
-        <ul>
-            <li>Include plugins and files in <i>phui/combobox/select/select.js</i>.</li>
-            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
-        </ul>
+        <input id='expirationBehavior' type='text' />
 		<script type='text/javascript' 
-                src='../../../steal/steal.js?select,development'>   
+                src='../../../steal/steal.js?phui/combobox/select,development'>   
         </script>
+        <script type='text/javascript'>
+            steal.plugins("phui/combobox/select").then(function($){
+ 
+			    $("#expirationBehavior").phui_combobox_select({
+					options: [{value: 1, text: "archive", selected: true}, 
+					          {value: 2, text: "delete"},
+							  {value: 3, text: "none"}] });		
+	            
+			});
+            steal.start();
+            
+        </script>		
 	</body>
 </html>
