adding enhanced select

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <input id="combobox_demo"/>
+        <input id="combobox_demo" type="text" name="myname" />
 		
 		<div><h1>Some html that dropdown draws over.</h1></div>
 		<div><button type="button">Dummy</button></div>
