adding better selectable to combobox

--- a/selectable/selectable.html
+++ b/selectable/selectable.html
@@ -12,14 +12,18 @@
 				background-color: #DFB946;
 				border:1px solid black;
 			}
+			li.activated{
+				background-color: red;
+				border:1px solid black;
+			}
         </style>
 	</head>
 	<body>
-        <ul id='menu'>
+        <div id='menu'>
             <li>one</li>
             <li>two</li>
             <li>three</li>
-        </ul>
+        </div>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?phui/selectable,development'>   
         </script>
