Adding some more comments to the code.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -104,7 +104,7 @@
 				    }]
 			    } 
 				
-                $.Model.extend("Item",{
+                /*$.Model.extend("Item",{
                     findAll : function(params, success, error){
                         $.ajax({
                             url: '/item',
@@ -121,7 +121,7 @@
 					setChildren : function(values) {
 						return this.Class.wrapMany(values);
 					}
-				});									
+				});*/									
 				
 				// create items to pre-populate combo
 				/*var items = [];
