--- a/selectable/selectable.html
+++ b/selectable/selectable.html
@@ -8,22 +8,39 @@
             	list-style:none;
 				width:50px;
             }
-			li.selected{
+			.selected{
 				background-color: #DFB946;
 				border:1px solid black;
 			}
-			li.activated{
+			.activated{
 				background-color: red;
 				border:1px solid black;
 			}
         </style>
 	</head>
 	<body>
+		<h1>Basic Selectable</h1>
         <div id='menu'>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
+            <li><span class="selectable">one</span></li>
+            <li><span class="selectable">two</span></li>
+            <li><span class="selectable">three</span></li>
         </div>
+		
+		<h1>Nested Selectable</h1>
+        <div id='nested_menu'>
+            <li><span class="selectable">one</span>
+			    <ul>
+			    	<li><span class="selectable">four</span></li>
+					<li><span class="selectable">five</span></li>
+				</ul>
+			</li>
+            <li><span class="selectable">two</span></li>
+            <li><span class="selectable">three</span>
+			    <ul>
+			    	<li><span class="selectable">six</span></li>
+			    </ul>
+			</li>
+        </div>		
 		<script type='text/javascript' 
                 src='../../steal/steal.js?phui/selectable,development'>   
         </script>
@@ -31,6 +48,9 @@
 			$(function(){
 				$('#menu').phui_selectable()
 			})
+			$(function(){
+				$('#nested_menu').phui_selectable()
+			})			
         </script>
 	</body>
 </html>
